--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -28,7 +28,8 @@
   <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 </header>
 
-  <div class = "sub-header"></div>
+<div class="mid">
+  <div class = "sub-header">
     <h1>Innovation<br />
     On<br />
     Demand
@@ -36,36 +37,44 @@
 
     <a href="">Get Started</a>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-</div>
+  </div>
+  
+  <img src="img/header-img.png"  class="code-snippet" alt="Image of a code snippet.">
+  </div>
+
+  <hr />
 
 
-<section>
+
+
+<section class="features">
   <h2>Features</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </section>
 
-<section>
+<section class ="about">
   <h2>About</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </section>
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-<section>  
+<section class="services">  
   <h2>Services</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </section>
 
-<section>
+<section class="product">
   <h2>Product</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </section>
 
-<section>
+<section class="vision">
   <h2>Vision</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </section>
+
+<hr />
 
 <footer>
   <h2>Contact</h2>
